<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>com.organization</groupId>
		<artifactId>mgl-module-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<artifactId>mgl-rest-provider</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>mgl-rest-provider</name>
	<url>https://github.com/Mbd06b/bootcamper-project</url>
	
	
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>21</java.version>
	</properties>
	
     <dependencyManagement>
	    <dependencies>
	      <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
				<version>3.3.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
	    </dependencies>
	</dependencyManagement>
	
	<dependencies>
		
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>mgl-impl</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>mgl-rest-remote</artifactId>
			<version>${project.version}</version>
		</dependency>
	     
	    <!-- spring-boot-starter-data-jpa comes bundled with hibernate-core -->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
		  <groupId>net.andreinc</groupId>
		  <artifactId>mockneat</artifactId>
		  <version>0.4.8</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
    		<version>32.1.2-jre</version>
		</dependency>
		
		<!-- spring-boot-starter-test comes bundled with Junit Jupiter  -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.springdoc</groupId>
		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
		    <version>2.6.0</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
		    <resource>
		       <directory>src/test/resources</directory>
		    </resource>
		    <resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		
		<plugins>
			 <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <configuration>
	                <source>${java.version}</source>
	                <target>${java.version}</target>
	            </configuration>
	        </plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
